Bug fixes - color on product button on mobile

--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -262,8 +262,8 @@ transition: all 300ms ease;
 
 .product_price {
   position: relative;
-  margin-top: -8.1719rem;
-  height: 8.1719rem;
+  margin-top: -8.2rem;
+  height: 8.2rem;
   border-radius: 0;
 }
 .product_price p {
